@@ -63,6 +63,7 @@ import org.apache.catalina.tribes.transport.nio.NioReceiver;
 import org.apache.catalina.util.ServerInfo;
 import org.apache.catalina.valves.AccessLogValve;
 import org.apache.catalina.webresources.StandardRoot;
+import org.apache.coyote.http2.Http2Protocol;
 import org.apache.ofbiz.base.component.ComponentConfig;
 import org.apache.ofbiz.base.concurrent.ExecutionPool;
 import org.apache.ofbiz.base.container.Container;
@@ -309,7 +310,7 @@ public class CatalinaContainer implements Container {
         ReplicationTransmitter trans = new ReplicationTransmitter();
         try {
             MultiPointSender mps = (MultiPointSender)Class.forName(ContainerConfig.getPropertyValue(clusterProp,
-                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).newInstance();
+                    "replication-mode", "org.apache.catalina.tribes.transport.bio.PooledMultiSender")).getDeclaredConstructor().newInstance();
             trans.setTransport(mps);
         } catch (Exception exc) {
             throw new ContainerException("Cluster configuration requires a valid replication-mode property: " + exc.getMessage());
@@ -345,8 +346,8 @@ public class CatalinaContainer implements Container {
     private ClusterManager prepareClusterManager(Property clusterProp) throws ContainerException {
         String mgrClassName = ContainerConfig.getPropertyValue(clusterProp, "manager-class", "org.apache.catalina.ha.session.DeltaManager");
         try {
-            return (ClusterManager)Class.forName(mgrClassName).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            return (ClusterManager)Class.forName(mgrClassName).getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
             throw new ContainerException("Cluster configuration requires a valid manager-class property", e);
         }
     }
@@ -417,9 +418,12 @@ public class CatalinaContainer implements Container {
     private Connector prepareConnector(Property connectorProp) {
         Connector connector = new Connector(ContainerConfig.getPropertyValue(connectorProp, "protocol", "HTTP/1.1"));
         connector.setPort(ContainerConfig.getPropertyValue(connectorProp, "port", 0) + Start.getInstance().getConfig().portOffset);
-
+        if ("true".equals(ContainerConfig.getPropertyValue(connectorProp, "upgradeProtocol", "false"))) {
+            connector.addUpgradeProtocol(new Http2Protocol());
+            Debug.logInfo("Tomcat " + connector + ": enabled HTTP/2", module);
+        }
         connectorProp.properties.values().stream()
-            .filter(prop -> !"protocol".equals(prop.name) && !"port".equals(prop.name))
+            .filter(prop -> !"protocol".equals(prop.name) && !"upgradeProtocol".equals(prop.name) && !"port".equals(prop.name))
             .forEach(prop -> {
                 if (IntrospectionUtils.setProperty(connector, prop.name, prop.value)) {
                     if (prop.name.indexOf("Pass") != -1) {
